--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.6.1'
@@ -21,9 +22,14 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.5'
     implementation 'com.squareup.okhttp3:okhttp:3.14.2'
     implementation 'org.json:json:20211205'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // DB
+    runtimeOnly 'mysql:mysql-connector-java'
 
 }
 
 test {
     useJUnitPlatform()
 }
+
